labanhMinh/w10-d1-d2-k8s-security-lab/d1-admission/bad-latest-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-latest-pod
  namespace: w10-security-lab
spec:
  containers:
    - name: nginx
      image: nginx:latest
      securityContext:
        runAsNonRoot: true
      resources:
        requests:
          cpu: 50m
          memory: 64Mi
        limits:
          cpu: 100m
          memory: 128Mi
