labanhMinh/w10-d1-d2-k8s-security-lab/d1-admission/bad-no-resources-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-no-resources-pod
  namespace: w10-security-lab
spec:
  containers:
    - name: nginx
      image: nginx:1.27-alpine
      securityContext:
        runAsNonRoot: true
