labanhMinh/w10-d1-d2-k8s-security-lab/d1-admission/bad-privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-privileged-pod
  namespace: w10-security-lab
spec:
  containers:
    - name: nginx
      image: nginx:1.27-alpine
      securityContext:
        privileged: true
        runAsNonRoot: true
      resources:
        requests:
          cpu: 50m
          memory: 64Mi
        limits:
          cpu: 100m
          memory: 128Mi
